add header to html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <title>kiMEALs</title>
     </head>
     <body>
+        <header>
+        <div>
+            <h1>kiMEALs</h1>
+        </div>
+        </header>
 
     </body>
 </html>
