--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
             <h1>kiMEALs</h1>
         </div>
         </header>
+        <main>
+            <div class="navbar">
+                <nav>
+                    <ul>
+                      <li><a href="./index.html">Home</a></li>
+                      <li><a href="./about.html">About</a></li>
+                      <li><a href="#footer">Contact</a></li>
+                    </ul>
+                  </nav>
+            </div>
+        </main>    
 
     </body>
 </html>
