add input methods and result space

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
                     </ul>
                   </nav>
             </div>
+            <div><input type="text" id="username" name="username" placeholder="Username"></div>
+            <div><input type="number" id="weightInput" name="weightInput" placeholder="Weight in kilograms"></div>
+            <div><input type="number" id="heightInput" name="heightInput" placeholder="Height in metres"></div>
+
+            <div><button id="calculate" onclick="fetchData()">Calculate BMI</button></div>
+
+            <div id="result"></div>
         </main>    
 
     </body>
