--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div id="result"></div>
         </main>    
         <footer></footer>
+        <script src="./main.js"></script>
 
     </body>
 </html>
