--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>kiMEALs</title>
+        <linl rel="stylesheet" href="./style.css"/>
     </head>
     <body>
         <header>
