--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                       <li><a href="./index.html">Home</a></li>
-                      <li><a href="./about.html">About</a></li>
+                      <li><a href="#">About</a></li>
                       <li><a href="#footer">Contact</a></li>
                     </ul>
                   </nav>
@@ -27,8 +27,18 @@
             <div><button id="calculate" onclick="fetchData()">Calculate BMI</button></div>
 
             <div id="result"></div>
+            <footer>
+                <div class="navbar">
+                    <p>&copy; 2023 Your BMI Recipe Website. All rights reserved.</p>
+                    <ul>
+                      <li><a href="#">Terms of Service</a></li>
+                      <li><a href="#">Privacy Policy</a></li>
+                      <li><a href="#">Contact Us</a></li>
+                    </ul>
+                  </div>
+            </footer>
         </main>    
-        <footer></footer>
+        
         <script src="./main.js"></script>
 
     </body>
